crates/jsonschema-codegen/tests/ui/invalid_multiple_of_type.stderr
error: "x" is not of type "number"
 --> tests/ui/invalid_multiple_of_type.rs:1:1
  |
1 | #[jsonschema::validator(schema = r#"{"multipleOf":"x"}"#)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `jsonschema::validator` (in Nightly builds, run with -Z macro-backtrace for more info)
