crates/jsonschema-codegen/tests/ui/invalid_multiple_of_type.rs
#[jsonschema::validator(schema = r#"{"multipleOf":"x"}"#)]
struct InvalidMultipleOfTypeValidator;

fn main() {}
